--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -1,4 +1,4 @@
 - Event.order(:start).each do |event|
   div
-    == link_to event.start, event.htmlLink
+    == link_to event.start.strftime('%Y-%m-%d %H:%M'), event.htmlLink
     |  #{ event.summary }
