--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -1,4 +1,7 @@
-- Event.order(:start).each do |event|
-  div
-    == link_to event.start.strftime('%Y-%m-%d %H:%M'), event.htmlLink
-    |  #{ event.summary }
+h3 直近の現場一覧
+ul.unstyled
+  - Event.filter{ start > DateTime.now }.order(:start).each do |event|
+    - w = %w(日 月 火 水 木 金 土)[event.start.wday]
+    li
+      == link_to event.start.strftime((event.start.hour || event.start.minute).zero? ? "%-m/%-d(#{w})" : "%-m/%-d(#{w}) %H:%M"), event.htmlLink, :target => '_blank'
+      |  #{ event.summary }
