--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -6,6 +6,7 @@ html
     title idol-calendar
     link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css" media="screen"
     link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap-responsive.min.css"
+    link rel="stylesheet" type="text/css" href="/stylesheets/style.css"
   body
     .navbar.navbar-static-top
       .navbar-inner
