modify about page

--- a/app/views/about.slim
+++ b/app/views/about.slim
@@ -1,3 +1,9 @@
 h3 これは何？
-== link_to 'アイドル関連のGoogleカレンダーまとめ : ガリバー日常記', 'http://gulliverdj.exblog.jp/19807773/'
-| に載っているカレンダーからデータを取得して一覧表示しています。
+p
+  == link_to 'アイドル関連のGoogleカレンダーまとめ : ガリバー日常記', 'http://gulliverdj.exblog.jp/19807773/'
+  | に載っているカレンダーからデータを取得して一覧表示しています。
+p 鋭意作成中。
+footer
+  .pull-right
+    | created by 
+    == link_to '@sugyan', 'https://twitter.com/sugyan'
