--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -21,16 +21,16 @@ html
     script type="text/javascript" src="/lib/bootstrap/js/bootstrap.min.js"
     footer
       .container
-        .social-buttons.pull-left
-          span.twitter
+        .social-buttons
+          span.twitter.pull-left
             a href="https://twitter.com/share" class="twitter-share-button" data-url="http://idol-calendar.herokuapp.com/" data-lang="ja" ツイート
             script type="text/javascript"
               | !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-          span.hatena
+          span.hatena.pull-left
             a href="http://b.hatena.ne.jp/entry/http://idol-calendar.herokuapp.com/" class="hatena-bookmark-button" data-hatena-bookmark-title="idol-calendar" data-hatena-bookmark-layout="standard-balloon" title="このエントリーをはてなブックマークに追加"
               img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;"
             script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"
-          span.facebook
+          span.facebook.pull-left
             iframe scrolling="no" style="border: none; overflow: hidden; height: 20px; width: 75px;" title="Like this content on Facebook." class="fb_ltr" src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fidol-calendar.herokuapp.com%2F&width=450&layout=button_count&colorscheme=light&show_faces=false&action=like"
         .pull-right
           p.credit
