--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,3 +17,12 @@ footer {
 footer .social-buttons, footer .credit {
     margin: 15px 0;
 }
+@media (max-width: 767px) {
+    footer {
+        margin-right: -20px;
+        margin-left: -20px;
+        padding-right: 20px;
+        padding-left: 20px;
+        height: 90px;
+    }
+}
