--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -8,7 +8,7 @@ html
     link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap-responsive.min.css"
     == stylesheet_link_tag :style
   body
-    .navbar.navbar-static-top
+    .navbar.navbar-fixed-top
       .navbar-inner
         .container
           == link_to 'idol-calendar', '/', :class => 'brand'
@@ -19,6 +19,7 @@ html
       == yield
     == javascript_include_tag :'lib/jquery-1.9.1.min.js'
     script type="text/javascript" src="/lib/bootstrap/js/bootstrap.min.js"
+    == javascript_include_tag :'application.js'
     footer
       .container
         .social-buttons
