--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -13,8 +13,19 @@ html
         .container
           == link_to 'idol-calendar', '/', :class => 'brand'
           ul.nav
-            li
-              == link_to '検索', url_for(:search)
+            li.dropdown
+              a data-toggle="dropdown"
+                | 地域別
+                b.caret
+              ul.dropdown-menu
+                li == link_to '北海道', url_for(:area, :area => :hokkaido)
+                li == link_to '東北', url_for(:area, :area => :tohoku)
+                li == link_to '関東', url_for(:area, :area => :kanto)
+                li == link_to '中部・甲信越', url_for(:area, :area => :chubu)
+                li == link_to '関西', url_for(:area, :area => :kansai)
+                li == link_to '中国・四国', url_for(:area, :area => :chushi)
+                li == link_to '九州・沖縄', url_for(:area, :area => :kyushu)
+            li == link_to '検索', url_for(:search)
           ul.nav.pull-right
             li
               == link_to 'about', '/about'
