--- a/app/views/about.slim
+++ b/app/views/about.slim
@@ -4,10 +4,13 @@ p
   | を参考に、各Googleカレンダーからデータを定期的に取得して一覧表示しています。
 p.text-warning 各カレンダーのすべてのイベント情報を取り込んでいるわけではなく漏れがある可能性もあります。
 h4 取得対象にしているカレンダー
-ul
-  - Calendar.order(:id).each do |calendar|
+- [['北海道', 'hokkaido'], ['東北', 'tohoku'], ['関東', 'kanto'], ['中部・甲信越', 'chubu'], ['関西', 'kansai'], ['中国・四国', 'chushi'], ['九州・沖縄', 'kyushu']].each do |area|
+  h5 == area[0]
+  ul
+  - Calendar.filter(:area => area[1]).order(:id).each do |calendar|
     li
       == link_to calendar.summary, 'https://www.google.com/calendar/embed?src=' + CGI.escape(calendar.cid), :target => '_blank'
+br
 p
   | ご要望にお応えできるかどうかは分かりませんが、「このカレンダーも含めて欲しい」などありましたら
   == link_to '@sugyan', 'https://twitter.com/sugyan', :target => '_blank'
